// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconSmallClose should correctly render component with specified props 1`] = `
<AccessibleSVG
  className="icon-close test"
  height={100}
  title="title"
  viewBox="181 11 8 8"
  width={200}
>
  <path
    className="fill-color"
    d="M189 11.806l-.806-.806L185 14.194 181.806 11l-.806.806L184.194 15 181 18.194l.806.806L185 15.806 188.194 19l.806-.806L185.806 15"
    fill="#123456"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconSmallClose should correctly render default component 1`] = `
<AccessibleSVG
  className="icon-close "
  height={8}
  viewBox="181 11 8 8"
  width={8}
>
  <path
    className="fill-color"
    d="M189 11.806l-.806-.806L185 14.194 181.806 11l-.806.806L184.194 15 181 18.194l.806.806L185 15.806 188.194 19l.806-.806L185.806 15"
    fill="#d3d3d3"
  />
</AccessibleSVG>
`;
